--- a/style.css
+++ b/style.css
@@ -24,8 +24,20 @@ body {
   width: 50px;
 }
 
+.display-choices {
+  padding-top: 2.5rem;
+}
 .show-choice {
   display: inline-block;
   padding: 2rem;
 }
-
+#user-header {
+  position: absolute;
+  top: 35%;
+  right: 37%;
+}
+#comp-header {
+  position: absolute;
+  top: 35%;
+  right: 54%;
+}
